--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://akahoshi1421.github.io/population"
+  "homepage": "https://akahoshi1421.github.io/population",
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  }
 }
